// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTransformStyles Get a correct default hover transform styles 1`] = `
{
  "": {
    "transform": {
      "general": {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) rotateX(30deg) rotateY(60deg) rotateZ(90deg) ",
        "transform-origin": "0% 0% ",
      },
      "l": {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) rotateX(30deg) rotateY(60deg) rotateZ(90deg) ",
        "transform-origin": "0% 0% ",
      },
      "m": {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) rotateX(30deg) rotateY(60deg) rotateZ(90deg) ",
        "transform-origin": "0% 0% ",
      },
      "s": {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) rotateX(30deg) rotateY(60deg) rotateZ(90deg) ",
        "transform-origin": "0% 0% ",
      },
      "xl": {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) rotateX(30deg) rotateY(60deg) rotateZ(90deg) ",
        "transform-origin": "0% 0% ",
      },
      "xs": {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) rotateX(30deg) rotateY(60deg) rotateZ(90deg) ",
        "transform-origin": "0% 0% ",
      },
      "xxl": {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) rotateX(30deg) rotateY(60deg) rotateZ(90deg) ",
        "transform-origin": "0% 0% ",
      },
    },
  },
}
`;

exports[`getTransformStyles Get a correct transform styles 1`] = `
{
  "": {
    "transform": {
      "general": {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) ",
        "transform-origin": "0% 0% ",
      },
      "l": {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) ",
        "transform-origin": "0% 0% ",
      },
      "m": {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) ",
        "transform-origin": "0% 0% ",
      },
      "s": {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) ",
        "transform-origin": "0% 0% ",
      },
      "xl": {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) ",
        "transform-origin": "0% 0% ",
      },
      "xs": {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) ",
        "transform-origin": "0% 0% ",
      },
      "xxl": {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) ",
        "transform-origin": "0% 0% ",
      },
    },
  },
  ":hover": {
    "transform": {
      "general": {
        "transform": "scaleX(2) translateX(20%) translateY(10%) rotateZ(90deg) ",
      },
      "l": {
        "transform": "scaleX(2) translateX(20%) translateY(10%) rotateZ(90deg) ",
      },
      "m": {
        "transform": "scaleX(2) translateX(20%) translateY(10%) rotateZ(90deg) ",
      },
      "s": {
        "transform": "scaleX(2) translateX(20%) translateY(10%) rotateZ(90deg) ",
      },
      "xl": {
        "transform": "scaleX(2) translateX(20%) translateY(10%) rotateZ(90deg) ",
      },
      "xs": {
        "transform": "scaleX(2) translateX(20%) translateY(10%) rotateZ(90deg) ",
      },
      "xxl": {
        "transform": "scaleX(2) translateX(20%) translateY(10%) rotateZ(90deg) ",
      },
    },
  },
}
`;
